# numerical_python_course

./: .gitignore  .hgignore  010_proc_python.en.ipynb  010_proc_python.ipynb  030_prvni-krucky.ipynb  050_zakladni-syntaxe.en.ipynb  050_zakladni-syntaxe.ipynb  060_zakladni-typy.en.ipynb  060_zakladni-typy.ipynb  070_kontejnery.ipynb  090_iteratory-a-generatory.ipynb  100_funkcionalni-programovani-v-pythonu.ipynb  110_moduly.en.ipynb  120_vyjimky.en.ipynb  120_vyjimky.ipynb  130_jak-python-lovi-stenice.ipynb  140_jednotkove-testy.ipynb  150_prace-s-retezci-a-se-soubory.ipynb  160_vytvarime-python-projekt.ipynb  170_zaklady-numpy.en.ipynb  210_optimalizace-az-na-cost.ipynb  220_paralelni-vypocty.ipynb  230_slepovani-jazyku-pomoci-pythonu.ipynb  240_jak-pandy-analyzuji-data.ipynb  LICENSE.txt  nez-zacneme.ipynb  pyproject.toml  requirements.txt
lecture_notes.cz/: .gitignore  010_proc_python.ipynb  020_uvod.en.ipynb  020_uvod.ipynb  030_prvni-krucky.ipynb  040_nastroje.ipynb  050_zakladni-syntaxe.ipynb  060_zakladni-typy.ipynb  070_kontejnery.en.ipynb  070_kontejnery.ipynb  080_objektove-orientovane-programovani.en.ipynb  080_objektove-orientovane-programovani.ipynb  090_iteratory-a-generatory.en.ipynb  090_iteratory-a-generatory.ipynb  100_funkcionalni-programovani-v-pythonu.ipynb  110_moduly.en.ipynb  110_moduly.ipynb  120_vyjimky.en.ipynb  120_vyjimky.ipynb  130_jak-python-lovi-stenice.ipynb  140_jednotkove-testy.ipynb  150_prace-s-retezci-a-se-soubory.ipynb  160_vytvarime-python-projekt.ipynb  170_zaklady-numpy.ipynb  180_matplotlib.ipynb  185_plotly.ipynb  (+9 more)
(+5 files in other folders)
