[project]
name = "numerical-python-course"
version = "0.1.0"
description = "Materials for the Numerical Python Course"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.11",
    "h5py>=3.12.1",
    "ipython>=8.31.0",
    "jax>=0.5.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "meson>=1.6.1",
    "ninja>=1.11.1.3",
    "numba>=0.60.0",
    "numpy>=2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pytest>=8.3.4",
    "scipy>=1.15.1",
    "sympy>=1.13.3",
]
